src/ExprParser.java
// Generated from Expr.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, ADDADD=11, SUBSUB=12, MUL=13, DIV=14, ADD=15, SUB=16, MOULD=17, 
		DEF=18, RETURN=19, IF=20, EQUAL=21, LESS=22, GREATER=23, UNEQUAL=24, GREATER_EQUAL=25, 
		LESS_EQUAL=26, WHILE=27, FOR=28, BREAK=29, NULL=30, TRUE=31, FALSE=32, 
		ID=33, INT=34, STRING=35, NOTES=36, LINE_NOTES=37, WS=38;
	public static final int
		RULE_file = 0, RULE_callDecl = 1, RULE_varDecl = 2, RULE_functionDecl = 3, 
		RULE_agsList = 4, RULE_d_block = 5, RULE_d_stat = 6, RULE_whilei = 7, 
		RULE_d_if = 8, RULE_d_elseif = 9, RULE_d_else = 10, RULE_d_for = 11, RULE_expr = 12, 
		RULE_exprList = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "callDecl", "varDecl", "functionDecl", "agsList", "d_block", 
			"d_stat", "whilei", "d_if", "d_elseif", "d_else", "d_for", "expr", "exprList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'='", "','", "'{'", "'}'", "'elseif'", "'else'", 
			"';'", "'**'", "'++'", "'--'", "'*'", "'/'", "'+'", "'-'", "'%'", "'def'", 
			"'return'", "'if'", "'=='", "'<'", "'>'", "'!='", "'>='", "'<='", "'while'", 
			"'for'", "'break'", "'null'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "ADDADD", 
			"SUBSUB", "MUL", "DIV", "ADD", "SUB", "MOULD", "DEF", "RETURN", "IF", 
			"EQUAL", "LESS", "GREATER", "UNEQUAL", "GREATER_EQUAL", "LESS_EQUAL", 
			"WHILE", "FOR", "BREAK", "NULL", "TRUE", "FALSE", "ID", "INT", "STRING", 
			"NOTES", "LINE_NOTES", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<D_ifContext> d_if() {
			return getRuleContexts(D_ifContext.class);
		}
		public D_ifContext d_if(int i) {
			return getRuleContext(D_ifContext.class,i);
		}
		public List<CallDeclContext> callDecl() {
			return getRuleContexts(CallDeclContext.class);
		}
		public CallDeclContext callDecl(int i) {
			return getRuleContext(CallDeclContext.class,i);
		}
		public List<WhileiContext> whilei() {
			return getRuleContexts(WhileiContext.class);
		}
		public WhileiContext whilei(int i) {
			return getRuleContext(WhileiContext.class,i);
		}
		public List<D_forContext> d_for() {
			return getRuleContexts(D_forContext.class);
		}
		public D_forContext d_for(int i) {
			return getRuleContext(D_forContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEF) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << ID))) != 0)) {
				{
				setState(34);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(28);
					varDecl();
					}
					break;
				case 2:
					{
					setState(29);
					functionDecl();
					}
					break;
				case 3:
					{
					setState(30);
					d_if();
					}
					break;
				case 4:
					{
					setState(31);
					callDecl();
					}
					break;
				case 5:
					{
					setState(32);
					whilei();
					}
					break;
				case 6:
					{
					setState(33);
					d_for();
					}
					break;
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public CallDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitCallDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallDeclContext callDecl() throws RecognitionException {
		CallDeclContext _localctx = new CallDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_callDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(ID);
			setState(40);
			match(T__0);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << ADD) | (1L << SUB) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << ID) | (1L << INT) | (1L << STRING))) != 0)) {
				{
				setState(41);
				exprList();
				}
			}

			setState(44);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(ID);
			setState(47);
			match(T__2);
			setState(48);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ExprParser.DEF, 0); }
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public D_blockContext d_block() {
			return getRuleContext(D_blockContext.class,0);
		}
		public AgsListContext agsList() {
			return getRuleContext(AgsListContext.class,0);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(DEF);
			setState(51);
			match(ID);
			setState(52);
			match(T__0);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(53);
				agsList();
				}
			}

			setState(56);
			match(T__1);
			setState(57);
			d_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgsListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExprParser.ID, i);
		}
		public AgsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agsList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitAgsList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgsListContext agsList() throws RecognitionException {
		AgsListContext _localctx = new AgsListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_agsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(ID);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(60);
				match(T__3);
				setState(61);
				match(ID);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class D_blockContext extends ParserRuleContext {
		public List<D_statContext> d_stat() {
			return getRuleContexts(D_statContext.class);
		}
		public D_statContext d_stat(int i) {
			return getRuleContext(D_statContext.class,i);
		}
		public D_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final D_blockContext d_block() throws RecognitionException {
		D_blockContext _localctx = new D_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_d_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__4);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << BREAK) | (1L << ID))) != 0)) {
				{
				{
				setState(68);
				d_stat();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class D_statContext extends ParserRuleContext {
		public D_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d_stat; }
	 
		public D_statContext() { }
		public void copyFrom(D_statContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class D_callDeclContext extends D_statContext {
		public CallDeclContext callDecl() {
			return getRuleContext(CallDeclContext.class,0);
		}
		public D_callDeclContext(D_statContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_callDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class D_formContext extends D_statContext {
		public D_forContext d_for() {
			return getRuleContext(D_forContext.class,0);
		}
		public D_formContext(D_statContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_form(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IbreakContext extends D_statContext {
		public TerminalNode BREAK() { return getToken(ExprParser.BREAK, 0); }
		public IbreakContext(D_statContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitIbreak(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentContext extends D_statContext {
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public AssignmentContext(D_statContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class D_ifmContext extends D_statContext {
		public D_ifContext d_if() {
			return getRuleContext(D_ifContext.class,0);
		}
		public D_ifmContext(D_statContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_ifm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnContext extends D_statContext {
		public TerminalNode RETURN() { return getToken(ExprParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnContext(D_statContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class D_whileContext extends D_statContext {
		public WhileiContext whilei() {
			return getRuleContext(WhileiContext.class,0);
		}
		public D_whileContext(D_statContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_while(this);
			else return visitor.visitChildren(this);
		}
	}

	public final D_statContext d_stat() throws RecognitionException {
		D_statContext _localctx = new D_statContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_d_stat);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new D_callDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				callDecl();
				}
				break;
			case 2:
				_localctx = new D_formContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				d_for();
				}
				break;
			case 3:
				_localctx = new D_whileContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				whilei();
				}
				break;
			case 4:
				_localctx = new AssignmentContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				varDecl();
				}
				break;
			case 5:
				_localctx = new D_ifmContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				d_if();
				}
				break;
			case 6:
				_localctx = new ReturnContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				match(RETURN);
				setState(83);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(82);
					expr(0);
					}
					break;
				}
				}
				break;
			case 7:
				_localctx = new IbreakContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(85);
				match(BREAK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileiContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(ExprParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public D_blockContext d_block() {
			return getRuleContext(D_blockContext.class,0);
		}
		public WhileiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whilei; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitWhilei(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileiContext whilei() throws RecognitionException {
		WhileiContext _localctx = new WhileiContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whilei);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(WHILE);
			setState(89);
			match(T__0);
			setState(90);
			expr(0);
			setState(91);
			match(T__1);
			setState(92);
			d_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class D_ifContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ExprParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public D_blockContext d_block() {
			return getRuleContext(D_blockContext.class,0);
		}
		public List<D_elseifContext> d_elseif() {
			return getRuleContexts(D_elseifContext.class);
		}
		public D_elseifContext d_elseif(int i) {
			return getRuleContext(D_elseifContext.class,i);
		}
		public D_elseContext d_else() {
			return getRuleContext(D_elseContext.class,0);
		}
		public D_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d_if; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final D_ifContext d_if() throws RecognitionException {
		D_ifContext _localctx = new D_ifContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_d_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(IF);
			setState(95);
			match(T__0);
			setState(96);
			expr(0);
			setState(97);
			match(T__1);
			setState(98);
			d_block();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(99);
				d_elseif();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(105);
				d_else();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class D_elseifContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public D_blockContext d_block() {
			return getRuleContext(D_blockContext.class,0);
		}
		public D_elseifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d_elseif; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_elseif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final D_elseifContext d_elseif() throws RecognitionException {
		D_elseifContext _localctx = new D_elseifContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_d_elseif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__6);
			setState(109);
			match(T__0);
			setState(110);
			expr(0);
			setState(111);
			match(T__1);
			setState(112);
			d_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class D_elseContext extends ParserRuleContext {
		public D_blockContext d_block() {
			return getRuleContext(D_blockContext.class,0);
		}
		public D_elseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d_else; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_else(this);
			else return visitor.visitChildren(this);
		}
	}

	public final D_elseContext d_else() throws RecognitionException {
		D_elseContext _localctx = new D_elseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_d_else);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__7);
			setState(115);
			d_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class D_forContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(ExprParser.FOR, 0); }
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public D_blockContext d_block() {
			return getRuleContext(D_blockContext.class,0);
		}
		public D_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d_for; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitD_for(this);
			else return visitor.visitChildren(this);
		}
	}

	public final D_forContext d_for() throws RecognitionException {
		D_forContext _localctx = new D_forContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_d_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(FOR);
			setState(118);
			match(T__0);
			setState(119);
			varDecl();
			setState(120);
			match(T__8);
			setState(121);
			expr(0);
			setState(122);
			match(T__8);
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(123);
				varDecl();
				}
				break;
			case 2:
				{
				setState(124);
				expr(0);
				}
				break;
			}
			setState(127);
			match(T__1);
			setState(128);
			d_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
